; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-rpc.c_rpc_out_ints.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-rpc.c_rpc_out_ints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@packet_ptr = common dso_local global i64 0, align 8
@packet_buffer = common dso_local global i64 0, align 8
@PACKET_BUFFER_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_out_ints(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @packet_ptr, align 8
  %6 = load i32, i32* %4, align 4
  %7 = sext i32 %6 to i64
  %8 = add nsw i64 %5, %7
  %9 = load i64, i64* @packet_buffer, align 8
  %10 = load i64, i64* @PACKET_BUFFER_SIZE, align 8
  %11 = add nsw i64 %9, %10
  %12 = icmp sle i64 %8, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i64, i64* @packet_ptr, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = mul nsw i32 %17, 4
  %19 = call i32 @memcpy(i64 %15, i32* %16, i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = load i64, i64* @packet_ptr, align 8
  %23 = add nsw i64 %22, %21
  store i64 %23, i64* @packet_ptr, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
